--- a/css/styles.css
+++ b/css/styles.css
@@ -598,12 +598,12 @@ footer span {
 	border: none;
 }
 
-.modal-close:hover .icon-close,
-.modal-close:focus .icon-close {
+.modal-close:hover .icon-icon-close,
+.modal-close:focus .icon-icon-close {
 	fill: #fff;
 }
 
-.icon-close {
+.icon-icon-close {
 	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -649,7 +649,7 @@ footer span {
 	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-input {
+.icon-icon-input {
 	position: absolute;
 	top: 8px;
 	left: 16px;
