--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,11 @@ max-width: 1440px;
 	cursor: pointer;
 	display: block;
 	margin: 0 auto;
+	text-align: center;
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	display: block;
+	padding: 16px 32px;
+	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .section-button:hover,
