--- a/css/styles.css
+++ b/css/styles.css
@@ -599,12 +599,12 @@ footer span {
 	border: none;
 }
 
-.modal-close:hover .icon-icon-close,
-.modal-close:focus .icon-icon-close {
+.modal-close:hover .icon-close,
+.modal-close:focus .icon-close {
 	fill: #fff;
 }
 
-.icon-icon-close {
+.icon-close {
 	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
