--- a/css/styles.css
+++ b/css/styles.css
@@ -700,7 +700,12 @@ footer span {
 	letter-spacing: 0.04em;
 	color: rgba(46, 47, 66, 0.4);
 }
-
+.policy-part {
+	line-height: 1.3;
+	text-decoration: underline;
+	text-decoration-skip-ink: none;
+	color: #4d5ae5;
+	margin-left: 4px; }
 .checkbox {
 	margin-bottom: 24px;
 	position: relative;
@@ -725,13 +730,6 @@ footer span {
 	color: #8e8f99;
 }
 
-.privacy-policy-link {
-	color: #4d5ae5;
-	line-height: 133%;
-	text-decoration: underline;
-	text-decoration-skip-ink: none;
-}
-
 .label-span {
 	display: inline-flex;
 	align-items: center;
@@ -747,14 +745,7 @@ footer span {
 		fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.privacy-policy-link {
-	color: #4d5ae5;
-	line-height: 133%;
-	text-decoration: underline;
-	text-decoration-skip-ink: none;
-}
-
-.checkbox1-input:checked+.modal-pp .label-span {
+.checkbox-input:checked+.modal-pp .label-span {
 	background-color: #404bbf;
 	border: none;
 	fill: #f4f4fd;
