--- a/css/styles.css
+++ b/css/styles.css
@@ -184,8 +184,11 @@ max-width: 1440px;
 .section-button:focus {
 	background-color: #404bbf;
 	cursor: pointer;
-		
-}
+	
+		transform: translateY(0);
+		box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+	}
+
 .visually-hidden {
 position: absolute;
 width: 1px;
@@ -525,7 +528,13 @@ footer span {
 	height: 40px;
 	background-color: #4d5ae5;
 }
-
+.footer-button:hover,
+.footer-button:focus {
+	background-color: #404bbf;
+	cursor: pointer;
+	transform: translateY(0);
+	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .footer-icon {
 	margin-left: 16px;
 	width: 24px;
